development/caddy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: caddy
data:
  Caddyfile: |
    0.0.0.0:6060 {
        proxy /     signalcd-ui.signalcd.svc.cluster.local:6662
        proxy /api  signalcd-api.signalcd.svc.cluster.local:6660

        log stdout
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy1
        image: abiosoft/caddy
        command:
          - caddy
        args:
          - --conf=/etc/caddy/Caddyfile
          - --log=stdout
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6060
        volumeMounts:
          - name: caddyfile
            mountPath: /etc/caddy/
      volumes:
        - name: caddyfile
          configMap:
              name: caddy
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  selector:
    app: caddy
  ports:
  - port: 6060
    targetPort: 6060
